# mas_python_services

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: release.yaml
configs/: buek1000_soil_data_service.toml  buek200_soil_data_service.toml  dem_1000_ascii_grid.toml  dwd_germany_university_bonn_service.toml
zalfmas_services/: registry_service.py
zalfmas_services/climate/: alter_time_series_wrapper.py  csv_time_series_service.py  csv_time_series_service_factory_service.py  dwd_cmip_cordex_reklies_service.py  dwd_core_ensemble_service.py  dwd_germany_service.py  dwd_germany_university_bonn_service.py  isimip_3b_v1.1_service.py  isimip_service.py  klima_konform_service.py  macsur_european_climate_scenarios_v2_service.py  spreewasser_N_service.py
zalfmas_services/climate/default_configs/: dwd_germany_university_bonn_service.json  dwd_germany_university_bonn_service.toml
zalfmas_services/config/: config_service.py
zalfmas_services/crop/: monica_crop_service.py
zalfmas_services/grid/: ascii_grid.py
zalfmas_services/grid/default_configs/: ascii_grid.toml
zalfmas_services/jobs/: jobs_service.py
zalfmas_services/management/: fertilizer_service.py  ilr_sowing_harvest_dates.py  ilr_sowing_harvest_dates_fbp_component.py
zalfmas_services/model/: climate_algorithms.py  web-berest-datomic-dwd-import.py
zalfmas_services/soil/: global_soil_dataset.py  sqlite_soil_data_service.py
zalfmas_services/soil/default_configs/: sqlite_soil_data_service.toml
