[project]
name = "zalfmas-services"
version = "0.1.12"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" }]
dependencies = [
    "pycapnp(>=2.0.0)",
    "zalfmas-common (>=0.1.29,<0.2.0)",
    #"zalfmas-fbp (>=0.2.6,<0.3.0)",
    "zalfmas-capnp-schemas (>=0.1.33,<0.2.0)",
    "poetry-core (>=2.0.0)",
    "pyzmq(>=26.2.1)",
    "numpy(>=2.1.2)",
    "tomli(>=2.0.1)",
    "tomlkit(>=0.13.2)",
    "netcdf4 (>=1.7.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
#zalfmas-common = {path = "../mas_python_common", develop = true}
#zalfmas-capnp-schemas = {path = "../mas_capnproto_schemas", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"